# nextdep_dsp

./: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
CHANGELOG/: v0.1.0.md  v0.2.0.md
docs/: api.md  deposit.mermaid  dsp_internals.md  index.md  installation.md  usage.md
docs/superpowers/plans/: 2026-03-20-config-layer.md  2026-03-31-dsp-api.md  2026-04-10-json-backend.md
docs/superpowers/specs/: 2026-03-20-config-layer-design.md  2026-03-31-dsp-api-design.md  2026-04-10-file-metadata-design.md  2026-04-10-json-backend-design.md
examples/: em_deposition.py  resume_deposition.py  xray_deposition.py
src/nextdep_dsp/: __init__.py  cli.py  config.py  dsp.py  utils.py
src/nextdep_dsp/authorization/: token.cfg  token.py  token.toml
src/nextdep_dsp/checks/: file_checks.py  report.py
src/nextdep_dsp/deposition/: decorators.py  deposit_api.py  enum.py  models.py  rest_adapter.py
src/nextdep_dsp/session/: models.py  store.py
src/nextdep_dsp/validation/: files.json  required_files.py  validate.py  validate_required_files.py
src/nextdep_dsp/validation/schema/: files.json
src/nextdep_dsp/validation/support/: filecompliance.py  keywords.py  schemacompliance.py
tests/: test.cfg  test.toml  test_authorization.py  test_cli_create.py  test_config.py  test_dsp.py  test_nextdep_dsp.py
tests/authorization/: test.toml  test_authorization.py
tests/checks/: test_file_checks.py  test_report.py
tests/session/: test_models.py  test_store.py
tests/tests/: test_deposit_api.py  test_rest_adapter.py
tests/validation/: test_file_checks.py  test_file_compliance.py
